--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
     --swiper-theme-color: #000;
     --swiper-navigation-size: 16px;
 }
-
 html{
     box-sizing: border-box;
     height: 100%;
@@ -66,6 +65,7 @@ a{
     width: 100%;
     padding: 16px 0;
     background-color: var(--hero-bg-color);
+    border-bottom: 1px solid var(--hero-bg-color);
 }
 .header__inner{
     display: flex;
@@ -92,6 +92,12 @@ a{
     font-size: 17px;
     line-height: 24px;
     color: #FFFFFF;
+}
+.black{
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 24px;
+    color: #000;
 }
 .header__inner__end__div{
     display: flex;
@@ -148,8 +154,9 @@ a{
 .header__inner__end__btn:hover{
     background-color: #fff;
 }
-.hamburger-menu{
+.burger-menu{
     display: none;
+    height: 40px;
 }
 .header__show-list{
     position: absolute;
@@ -272,7 +279,7 @@ a{
     .header__inner__end__btn{
         display: none;
     }
-    .hamburger-menu{
+    .burger-menu{
         display: block;
         width: 40px;
         height: 30px;
@@ -366,7 +373,7 @@ a{
     line-height: 48px;
 }
 .swiper {
-    width:100%;
+    width:870px;
     height: 100%;
     margin-bottom: 71px;
   }
@@ -374,6 +381,7 @@ a{
     text-align: center;
     background: #48535B;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     border-radius: 32px;
   }
@@ -430,11 +438,6 @@ a{
 @media screen and (max-width:1000px) {
     .swiper{
         width: 80%;
-    }
-    .swiper-slide{
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
     }
     .swiper-slide__start{
         padding-left: 40px;
@@ -559,6 +562,10 @@ a{
 .footer__inner__link{
     color: #fff;
 }
+.footer__inner__link:hover{
+    color: #fff;
+    opacity: 0.8;
+}
 .footer__inner__end{
     display: flex;
     align-items: center;
@@ -567,6 +574,10 @@ a{
     margin: 0;
     display: block;
     color: #fff;
+}
+.footer__inner__end-tel:hover{
+    color: #fff;
+    opacity: 0.8;
 }
 .footer__inner__end_instagramm{
     margin-left: 16px;
